--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="fecha">FECHA</string>
     <string name="numTelefono">TELEFONO</string>
     <string name="add">AÑADIR</string>
+    <string name="atras">ATRAS</string>
+
 
 
 </resources>
